# aegis

./: .dockerignore  .gitignore  Makefile  PLAN.md  README.md  aegis.yaml.example  pyproject.toml
aegis/: __init__.py  shield.py
aegis-monitor/: Dockerfile  README.md  monitor.db  package-lock.json  package.json  pyproject.toml
aegis-monitor/monitor/: __init__.py  app.py  async_db.py  auth.py  cache.py  clustering.py  config.py  contagion.py  coordination.py  db.py  distribution.py  epidemiology.py  graph.py  models.py  validation.py
aegis-monitor/monitor/backends/: __init__.py  _base.py  _postgres.py  _sqlite.py
aegis-monitor/monitor/simulator/: __init__.py  corpus.py  engine.py  models.py  presets.py  routes.py  topology.py
aegis-monitor/monitor/simulator/presets/: moltbook-default.yaml  moltbook-outbreak.yaml  no-aegis-baseline.yaml  scanner-only.yaml
aegis-monitor/monitor/simulator/presets/scenarios/: moltbook-worm-outbreak.md
aegis-monitor/monitor/static/: graph.js  index.html  login.html  simulator.css  simulator.html  simulator.js  style.css  vendor-sigma.min.js
aegis-monitor/monitor/static/src/: vendor.js
aegis-monitor/tests/: conftest.py  test_app.py  test_async_db.py  test_auth.py  test_cache.py  test_clio_clustering.py  test_clustering.py  test_contagion.py  test_coordination.py  test_db_postgres.py  test_distribution.py  test_embedding_model_migration.py  test_epidemiology.py  test_graph.py  test_killswitch_api.py  test_quarantine_api.py  test_transactions.py  test_validation.py
aegis-monitor/tests/test_simulator/: __init__.py  test_corpus.py  test_e2e.py  test_engine.py  test_models.py  test_presets.py  test_routes.py  test_sentinels.py  test_topology.py
aegis-openclaw/: README.md  SKILL.md
aegis-openclaw/scripts/: _helpers.py  audit.py  budget.py  compromise.py  context_snapshot.py  decay.py  drift.py  evaluate_action.py  integrity_check.py  killswitch.py  memory_validate.py  nk_assess.py  quarantine_check.py  quarantine_manage.py  sanitize.py  scan.py  status.py  threat_intel.py  trust.py  vouch.py
aegis-sentinel/: README.md  pyproject.toml
aegis-sentinel/profiles/: sentinel.yaml
aegis-sentinel/sentinel/: __init__.py  __main__.py  config.py  coverage.py  observer.py  reporter.py  sentinel.py
aegis-sentinel/tests/: test_config.py  test_coverage.py  test_observer.py  test_reporter.py  test_sentinel.py
aegis/behavior/: __init__.py  content_hash.py  drift.py  embedding_providers.py  isolation_forest.py  message_drift.py  prompt_monitor.py  tracker.py
aegis/broker/: __init__.py  actions.py  broker.py  budgets.py  manifests.py  patchers.py  quarantine.py
aegis/coordination/: __init__.py  client.py  reports.py
aegis/core/: config.py  http.py  killswitch.py  platform_detection.py  remote_killswitch.py  remote_quarantine.py  remote_threat_intel.py  self_integrity.py  state_log.py  state_store.py  telemetry.py
aegis/dendritic/: __init__.py  alert.py  channel.py  processor.py
aegis/identity/: __init__.py  attestation.py  nkcell.py  resolver.py  speaker.py  trust.py
aegis/integrity/: __init__.py  discovery.py  monitor.py  watcher.py
aegis/memory/: __init__.py  guard.py  taint.py  ttl.py
aegis/monitoring/: __init__.py  client.py  reports.py
aegis/profiles/: moltbook.yaml
aegis/providers/: __init__.py  anthropic.py  base.py  generic.py  ollama.py  openai.py  vllm.py
aegis/recovery/: __init__.py  purge.py  quarantine.py  rollback.py
aegis/scanner/: __init__.py  content_gate.py  envelope.py  intent_divergence.py  llm_guard.py  llm_screen.py  pattern_matcher.py  pii.py  sanitizer.py  semantic.py  yara_engine.py
aegis/skills/: __init__.py  loader.py  manifest.py  quarantine.py
aegis_proxy/: README.md  __init__.py  __main__.py  config.py  handlers.py  server.py
docs/: TODO.md  api-reference.md  comparison.md  openclaw-integration.md  quickstart-monitor.md  quickstart.md  rationale.md
docs/plans/: 2026-02-14-aegis-implementation.md  2026-02-25-pre-emptive-contagion-avoidance-design.md  2026-02-25-pre-emptive-contagion-avoidance.md  2026-02-28-epidemic-simulator-design.md  2026-02-28-epidemic-simulator-plan.md  2026-02-28-moltbook-profile-design.md  2026-02-28-moltbook-profile-plan.md  2026-03-15-sentinel-agent-design.md  2026-03-15-sentinel-agent-plan.md  2026-03-17-monitor-async-db-transactions.md  2026-03-21-monitor-response-cache-design.md  2026-03-21-monitor-response-cache-plan.md
examples/: action_brokering.py  behavioral_monitoring.py  identity_and_trust.py  multi_agent_defense.py  openclaw_setup.py  quickstart.py
tests/: test_api.py  test_integration.py  test_shield.py  test_shield_async.py
(+114 files in other folders)
